--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/76PEX8JGbqs"></iframe>
 <p>Imi place sa ma uit la Andreea Bostanica. Visez s-o fut in pizda dar din pacate eu nu pot, sunt doar un labar prost care este in curent acuzat de catre procuratura pentru <abbr title="mi-am dat de prea multe ori laba, mi-am abuzat sarmulita">abuz de animale</abbr>.</p>
 <p>Din acest motiv am si acest background cu ea, o definesc ca fiind crush-ul meu datorita faptului ca o iubesc dar n-o s-o am niciodata si voi ramane doar la laba.</p>
-<p>Colegul meu, <a href="https://wreepersugepula.xyz">Wreeper</a>, are si el website personal.</p>
+<p>De asemenea sunt mort dupa si am inceput sa visez o femeie de 25 de ani pe nume Mieunica pe care am cunoscut-o pe SA:MP ce nici macar nu ma baga in seama pt ca sunt ultimul copil idiot toxic retardat. De asemenea spun ca am 20 de ani cand de fapt am 13 ani de viata si ma uit la anime-uri la dinalea la Hinata la Naruto sunt fetita baietel.</p>
 </body>
 </html>
