--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:title" content="Senres">
 <meta property="og:description" content="ma cheama senres si sug pula gratis, oricand, oriunde">
-<meta property="og:image" content="https://senres.suge-pula.xyz/senres.png">
-<meta property="og:url" content="https://senres.suge-pula.xyz">
+<meta property="og:image" content="https://senres.sugepula.xyz/senres.png">
+<meta property="og:url" content="https://senres.sugepula.xyz">
 <link rel="stylesheet" href="style0.css">
 <title>Senres</title>
 </head>
