--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--
+Da sunt ultimul sclav sunt cea mai mare curva cum de ai ghicit?
+
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +18,7 @@
 <body>
 <h1>Salut!</h1>
 <p>Ma cheama Senres si acesta este website-ul meu personal. Locuiesc in coltul Sucevei, unde sunt abandonat si batut si lovit in gura de catre soricei si sobolani zi de zi noapte de noapte. Imi place sa ma muiesc si sa sug pula agresiv impreuna cu prietenii mei din <b>ᵀᴾ</b> si <b>Nᴀᴛᴏ</b>. De asemenea, imi place sa mananc branza de pe pula si sa stau cu lachiosi in conferinta ce au dreaduri la cur.</p>
-<p>Daca doriti sa va sug pula agresiv va astept pe Discord: <b>Senres TP#8706</b></p>
+<p>Daca doriti sa va sug pula agresiv va astept pe Discord: <b>Senres#3722</b></p>
 <img src="senres.png" width="523" height="473"> <img src="senres2.jpg" width="523" height="473">
 <p>Melodia mea preferata este:</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/76PEX8JGbqs"></iframe>
