--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@ Da sunt ultimul sclav sunt cea mai mare curva cum de ai ghicit?
 </head>
 <body>
 <h1>Salut!</h1>
-<p>Ma cheama Senres si acesta este website-ul meu personal. Locuiesc in coltul Sucevei, unde sunt abandonat si batut si lovit in gura de catre soricei si sobolani zi de zi noapte de noapte. Imi place sa ma muiesc si sa sug pula agresiv impreuna cu prietenii mei din <b>ᵀᴾ</b> si <b>Nᴀᴛᴏ</b>. De asemenea, imi place sa mananc branza de pe pula si sa stau cu lachiosi in conferinta ce au dreaduri la cur.</p>
-<p>Daca doriti sa va sug pula agresiv va astept pe Discord: <b>Senres#3722</b></p>
+<p>Ma cheama Senres (Vlad Jurca) si acesta este website-ul meu personal. Locuiesc in coltul Sucevei, unde sunt abandonat si batut si lovit in gura de catre soricei si sobolani zi de zi noapte de noapte. Imi place sa ma muiesc si sa sug pula agresiv impreuna cu prietenii mei din <b>ᵀᴾ</b> si <b>Nᴀᴛᴏ</b>. De asemenea, imi place sa mananc branza de pe pula si sa stau cu lachiosi in conferinta ce au dreaduri la cur.</p>
+<p>Daca doriti sa va sug pula agresiv va astept pe Discord: <b>Senres ᵀᴾ#3722</b></p>
 <img src="senres.png" width="523" height="473"> <img src="senres2.jpg" width="523" height="473">
 <p>Melodia mea preferata este:</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/76PEX8JGbqs"></iframe>
 <p>Imi place sa ma uit la Andreea Bostanica. Visez s-o fut in pizda dar din pacate eu nu pot, sunt doar un labar prost care este in curent acuzat de catre procuratura pentru <abbr title="mi-am dat de prea multe ori laba, mi-am abuzat sarmulita">abuz de animale</abbr>.</p>
 <p>Din acest motiv am si acest background cu ea, o definesc ca fiind crush-ul meu datorita faptului ca o iubesc dar n-o s-o am niciodata si voi ramane doar la laba.</p>
 <p>De asemenea sunt mort dupa si am inceput sa visez o femeie de 25 de ani pe nume Mieunica pe care am cunoscut-o pe SA:MP ce nici macar nu ma baga in seama pt ca sunt ultimul copil idiot toxic retardat. De asemenea spun ca am 20 de ani cand de fapt am 13 ani de viata si ma uit la anime-uri la dinalea la Hinata la Naruto sunt fetita baietel.</p>
+<p>Ma puteti contacta si prin emailul mamei mele! lilijurca1234@gmail.com</p>
 </body>
 </html>
